inicial gaps and correcting HTML

--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
   margin: 88px 80px 48px;
 }
+
+#titlepage{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#container{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+#description{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+}
+
+.divider2 {
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+}
+
+
